
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtext"
version = "2.3.1"
authors = [
    { name="Geoff Bache", email="geoff.bache@pobox.com" },
    { name="Johan Andersson"},
]
description = "Database to text utility for approval testing"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/texttest/dbtext"
"Bug Tracker" = "https://github.com/texttest/dbtext/issues"
